--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -5,15 +5,13 @@ ENV AIRFLOW_HOME=/usr/local/airflow
 USER root
 
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-        python3-pip \
-        libcurl4-gnutls-dev \
-        librtmp-dev \
-        python3-dev \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* \
+    && apt-get install -y python3-pip \
+    libcurl4-gnutls-dev \
+    librtmp-dev \
+    python3-dev \
+    libpq-dev
 
-RUN python3 -m pip install psycopg2 argcomplete pycurl
+RUN python3 -m pip install psycopg2-binary argcomplete pycurl
 
 COPY ./config/* /
 
